--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "playwrightts",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -10,6 +12,9 @@
   "devDependencies": {
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.1.0",
-    "allure-playwright": "^3.3.2"
+    "allure-playwright": "^3.3.2",
+    "husky": "^9.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
