--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.1.0",
+    "ajv": "^8.17.1",
+    "allure-commandline": "^2.34.1",
+    "allure-js-commons": "^3.4.1",
     "allure-playwright": "^3.4.1",
+    "dotenv": "^17.2.2",
     "husky": "^9.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
