--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@playwright/test": "^1.55.0",
     "@types/node": "^24.1.0",
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "allure-commandline": "^2.34.1",
     "allure-js-commons": "^3.4.1",
     "allure-playwright": "^3.4.1",
